# COATHEAL-flight-software

./: .bash_history  .gitconfig  .gitignore  CMakeLists.txt  Preparation_and_Test_Activities_at_Esrange.docx  README.md  SED-Software-Overview.odt  SED.txt  bexus_manual.txt  context.md  lista_cumparaturri.xlsx  setup_coatheal.sh  soft_sed.odt
.github/workflows/: ci.yml
.ssh/: id_ed25519  id_ed25519.pub  known_hosts  known_hosts.old
config/: onboard.debug.ini  onboard.example.ini
deploy/: README.md  coatheal-link-watch.path  coatheal-link-watch.service  coatheal-onboard-debug.service  coatheal-onboard.service
docs/: CHANGELOG-RevB.md  ESA-Software-Presentation.md  ESA-Verbal-Presentation.md  REV-B.1-VERIFICATION-LOG.md  SED-Compliance-Report.md  SED-Software-Section-Review.md  SED.md  architecture.md  component-configuration-and-bring-up.md  configuration.md  deployment.md  development.md  ground-station.md  hardware.md  manual-operations.md  onboard.md  protocol.md  rev-c-installation-and-hardware-setup.md  rev-c-instruction-manual.md  rev-c-rtd-click-plug-and-play.md  security-remediation.md  tmc2240-pin-configuration-and-commissioning.md
ground-station/: README.md  demo_app.py  gui_app.py  main.py  requirements.txt
ground-station/app/: __init__.py  command_client.py  demo.py  protocol.py  telemetry_server.py  thermal_profiles.py
ground-station/app/gui/: __init__.py  discovery.py  dispatch.py  firewall.py  main_window.py  panels_control.py  panels_info.py  plots.py  theme.py  widgets.py
ground-station/docs/: firewall.md
ground-station/scripts/: configure_firewall.ps1
ground-station/tests/: __init__.py  test_demo.py  test_discovery.py  test_firewall.py  test_gui_smoke.py  test_hardware_setup.py  test_protocol.py  test_telemetry_server_csv.py  test_thermal_profiles.py
onboard/: CMakeLists.txt
onboard/include/coatheal/: command.hpp  command_parser.hpp  command_server.hpp  component_health.hpp  config.hpp  fatigue_sequencer.hpp  heater_scheduler.hpp  motion_lock.hpp  phase.hpp  pid_controller.hpp  sd_notify.hpp  sensor_manager.hpp  state_manager.hpp  status_flags.hpp  stepper_channel.hpp  stepper_controller.hpp  storage_manager.hpp  system_controller.hpp  system_mode.hpp  telemetry.hpp  telemetry_client.hpp  telemetry_queue.hpp  thermal_controller.hpp  tmc2240_driver.hpp  tmc5160_driver.hpp
onboard/include/coatheal/hal/: gpio_output.hpp  i2c_adapter.hpp  ina3221_adapter.hpp  pwm_controller.hpp  rtc_adapter.hpp  spi_adapter.hpp  spi_bus_lock.hpp  status_led.hpp  stepper_driver.hpp
onboard/src/: command_parser.cpp  command_server.cpp  config.cpp  fatigue_sequencer.cpp  heater_scheduler.cpp  main.cpp  motion_lock.cpp  pid_controller.cpp  sd_notify.cpp  sensor_manager.cpp  state_manager.cpp  status_flags.cpp  stepper_channel.cpp  stepper_controller.cpp  storage_manager.cpp  system_controller.cpp  telemetry.cpp  telemetry_client.cpp  telemetry_queue.cpp  thermal_controller.cpp  tmc2240_driver.cpp  tmc5160_driver.cpp
onboard/src/hal/: gpio_output.cpp  gpio_status_led.cpp  gpio_step_dir_driver.cpp  i2c_adapter.cpp  ina3221_adapter.cpp  pwm_controller.cpp  rtc_adapter.cpp  simulated_status_led.cpp  simulated_stepper_driver.cpp  spi_adapter.cpp  spi_bus_lock.cpp
scripts/: _pdf_extract.py  fake_beacon.py  hardware_setup.py  install_onboard_service.sh  preflight_healthcheck.sh  purge_sensitive_history.sh  remote_debug.py  remote_verify.py  reverse_tunnel.py  rotate_ssh_key.sh  run_debug.sh  spi_probe.py  uninstall_onboard_service.sh
tests/: CMakeLists.txt  downlink_bandwidth_test.cpp  enqueue_throughput_bench.cpp  pulse_jitter_bench.cpp
tests/unit/: safety_test.cpp  state_machine_test.cpp  status_led_test.cpp  stepper_test.cpp  test_phase_rev_b.cpp  test_phase_rev_c.cpp  test_safety_rev_b.cpp  test_safety_rev_c.cpp  test_sensor_manager_rev_b.cpp  test_sensor_manager_rev_c.cpp  test_stepper_rev_b.cpp  test_stepper_rev_c.cpp  test_suite.cpp  test_telemetry_rev_b.cpp  test_telemetry_rev_c.cpp
